--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             DADOS PESSOAIS
         </div>
         <div class="titulo2 linha">
-            <img class="icons" src="CSS/image/homem-usuario.png" alt="icon name" />
+            <img class="icons" src="/public/CSS/image/homem-usuario.png" alt="icon name" />
             <div>
                 <div>Nome</div>
                 <div class="espec colorname">
