--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             DADOS PESSOAIS
         </div>
         <div class="titulo2 linha">
-            <img class="icons" src="/public/CSS/image/homem-usuario.png" alt="icon name" />
+            <img class="icons" src="public/CSS/image/homem-usuario.png" alt="icon name" />
             <div>
                 <div>Nome</div>
                 <div class="espec colorname">
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="titulo2 linha">
-            <img class="icons" src="CSS/image/whatsapp.png" alt="icon whatsapp" />
+            <img class="icons" src="public/CSS/image/whatsapp.png" alt="icon whatsapp" />
             <div>
                 <div>Whatsapp</div>
                 <div class="espec">
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="titulo2 linha">
-            <img class="icons" src="CSS/image/o-email.png" alt="icon email" />
+            <img class="icons" src="public/CSS/image/o-email.png" alt="icon email" />
             <div>
                 <div>E-mail</div>
                 <div class="espec">
@@ -46,7 +46,7 @@
             </div>
         </div>
         <div class="titulo2 linha">
-            <img class="icons" src="CSS/image/linkedin.png" alt="icon linkedin" />
+            <img class="icons" src="public/CSS/image/linkedin.png" alt="icon linkedin" />
             <div>
                 <div>Linkedin</div>
                 <div class="espec">
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="titulo2 linha">
-            <img class="icons" src="CSS/image/github.png" alt="icon github" />
+            <img class="icons" src="public/CSS/image/github.png" alt="icon github" />
             <div>
                 <div>GITHUB</div>
                 <div class="espec">
@@ -113,7 +113,7 @@
         ________________________________________________________________________________________________________________________________________________________
     </div>
     <div class="titulo2 linha">
-        <img class="icons" src="CSS/image/experiencia.png" alt="icon experiencia" />
+        <img class="icons" src="public/CSS/image/experiencia.png" alt="icon experiencia" />
         <div>
             <div class="exp">EXPERIENCIA PROFISSIONAL</div>
             <div class="obs">(Clique no Nome da Empresa para visualizar)</div>
@@ -254,7 +254,7 @@
     </div>
 
     <div class="titulo2 linha">
-        <img class="icons" src="CSS/image/educação.png" alt="icon educacao" />
+        <img class="icons" src="public/CSS/image/educação.png" alt="icon educacao" />
         <div>
             <div class="educ">EDUCAÇÃO</div>
             <div class="espec">
@@ -305,49 +305,49 @@
         </div>
     </div>
     <div class="titulo2 linha">
-        <img class="icons" src="CSS/image/certificado.png" alt="icon certificado" />
+        <img class="icons" src="public/CSS/image/certificado.png" alt="icon certificado" />
         <div>
             <div class="cert">CERTIFICADOS</div>
             <div class="">
-                <img class="grade_cursos" src="CSS/Certificados/Aprenda%20o%20que%20são%20Estrutura%20de%20Dados%20e%20Algoritmos.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Boas-vindas%20ao%20Bootcamp%20Cognizant%20Java%20Developer.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Conhecendo%20funções%20e%20validação%20de%20dados%20com%20PHP.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Criando%20seu%20Primeiro%20Repositório%20no%20GitHub%20Para%20Compartilhar%20Seu%20Progresso.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Debugging%20Java.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Desmistificando%20Microsserviços,%20BFF%20e%20DDD.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Dominando%20IDEs%20Java.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Entendendo%20Métodos%20Java.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Estruturas%20de%20Dados%20em%20Java%20-%20Introdução.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Estruturas%20de%20Dados%20em%20Java%20-%20Arvores.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Estruturas%20de%20Dados%20em%20Java%20-%20Listas.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Estruturas%20de%20Dados%20em%20Java%20-%20Pilhas%20e%20Filas.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Estruturas%20de%20Dados%20em%20Java%20-%20Principais%20Implementações.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Estruturas%20de%20Repetição%20e%20Arrays%20em%20Java.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Formulários%20com%20condicionais%20e%20sessões%20com%20PHP.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Introdução%20a%20APIs%20e%20métodos.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Introdução%20a%20Qualidade%20de%20Software.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Introdução%20ao%20Desenvolvimento%20Moderno%20de%20Software.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Introdução%20ao%20Ecossistema%20e%20Documentação%20PHP.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Introdução%20ao%20Git%20e%20ao%20GitHub.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Introdução%20ao%20PHP.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Introdução%20aos%20Conceitos%20de%20API%20e%20Clean%20Architecture.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Lógica%20Condicional%20e%20Controle%20de%20Fluxos%20em%20Java.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Lógica%20de%20Programação%20Essencial.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Modelando%20um%20banco%20de%20dados%20na%20prática%20com%20SQL%20SERVER.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Orientação%20a%20objetos,Exceçoes,%20Banco%20de%20dados%20PHP.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Praticando%20Orientação%20a%20Objetos%20com%20Java.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Reforçando%20o%20Conceito%20de%20Laços%20em%20Java.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Resolvendo%20Desafios%20de%20Código%20em%20Java.png" />
-                <img class="grade_cursos" src="CSS/Certificados/SQL%20SERVER%20-%20Criando%20suas%20primeiras%20consultas.png" />
-                <img class="grade_cursos" src="CSS/Certificados/SQL%20Server%20Boas%20práticas%20em%20bancos%20relacionados.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Trabalhando%20com%20Collections%20Java.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Tratamento%20de%20Exceções%20em%20Java.png" />
-                <img class="grade_cursos" src="CSS/Certificados/Variáveis,%20Tipos%20de%20Dados%20e%20Operadores%20Matemáticos%20em%20Java.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Aprenda%20o%20que%20são%20Estrutura%20de%20Dados%20e%20Algoritmos.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Boas-vindas%20ao%20Bootcamp%20Cognizant%20Java%20Developer.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Conhecendo%20funções%20e%20validação%20de%20dados%20com%20PHP.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Criando%20seu%20Primeiro%20Repositório%20no%20GitHub%20Para%20Compartilhar%20Seu%20Progresso.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Debugging%20Java.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Desmistificando%20Microsserviços,%20BFF%20e%20DDD.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Dominando%20IDEs%20Java.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Entendendo%20Métodos%20Java.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Estruturas%20de%20Dados%20em%20Java%20-%20Introdução.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Estruturas%20de%20Dados%20em%20Java%20-%20Arvores.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Estruturas%20de%20Dados%20em%20Java%20-%20Listas.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Estruturas%20de%20Dados%20em%20Java%20-%20Pilhas%20e%20Filas.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Estruturas%20de%20Dados%20em%20Java%20-%20Principais%20Implementações.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Estruturas%20de%20Repetição%20e%20Arrays%20em%20Java.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Formulários%20com%20condicionais%20e%20sessões%20com%20PHP.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Introdução%20a%20APIs%20e%20métodos.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Introdução%20a%20Qualidade%20de%20Software.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Introdução%20ao%20Desenvolvimento%20Moderno%20de%20Software.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Introdução%20ao%20Ecossistema%20e%20Documentação%20PHP.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Introdução%20ao%20Git%20e%20ao%20GitHub.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Introdução%20ao%20PHP.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Introdução%20aos%20Conceitos%20de%20API%20e%20Clean%20Architecture.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Lógica%20Condicional%20e%20Controle%20de%20Fluxos%20em%20Java.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Lógica%20de%20Programação%20Essencial.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Modelando%20um%20banco%20de%20dados%20na%20prática%20com%20SQL%20SERVER.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Orientação%20a%20objetos,Exceçoes,%20Banco%20de%20dados%20PHP.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Praticando%20Orientação%20a%20Objetos%20com%20Java.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Reforçando%20o%20Conceito%20de%20Laços%20em%20Java.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Resolvendo%20Desafios%20de%20Código%20em%20Java.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/SQL%20SERVER%20-%20Criando%20suas%20primeiras%20consultas.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/SQL%20Server%20Boas%20práticas%20em%20bancos%20relacionados.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Trabalhando%20com%20Collections%20Java.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Tratamento%20de%20Exceções%20em%20Java.png" />
+                <img class="grade_cursos" src="public/CSS/Certificados/Variáveis,%20Tipos%20de%20Dados%20e%20Operadores%20Matemáticos%20em%20Java.png" />
             </div>
         </div>
     </div>
     <div class="titulo2 linha">
-        <img class="icons" src="CSS/image/referencia.png" alt="icon referencia" />
+        <img class="icons" src="public/CSS/image/referencia.png" alt="icon referencia" />
         <div>
             <div class="refer">REFERÊNCIAS</div>
             <div class="espec">
