--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="container">
 <div class="lista">
     <div class="foto">
-        <img class="icons" src="sua-foto.jpg" alt="Sua Foto" />
+        <img class="icons" src="public/CSS/image/fotoperfil.png" style="width: 102%" alt="Sua Foto" />
     </div>
     <div class="container2">
         <div class="titulo">
